# amrutam-telemedicine

./: .dockerignore  .env.example  .gitignore  .opencode-context.md  Amrutam-Telemedicine.postman_collection.json  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2a5a19c0a534_add_data_partitioning.py  3c9b1e5f7a2d_add_lockout_and_token_version.py  5c95691ca0d1_initial.py
app/: main.py  models.py  worker.py
app/common/: exceptions.py  middleware.py  pagination.py  rate_limit.py  retry.py
app/core/: base.py  cache.py  config.py  database.py  dependencies.py  security.py
app/modules/analytics/: router.py  service.py
app/modules/audit/: models.py  router.py  service.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/bookings/: router.py  schemas.py  service.py
app/modules/consultations/: models.py  router.py  schemas.py  service.py
app/modules/doctors/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/payments/: models.py  router.py  schemas.py  service.py
app/monitoring/: metrics.py  tracing.py
docs/: ER-diagram.md  architecture.md  openapi.json  project-documentation.md  threat-model.md
infrastructure/: docker-compose.yml
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_analytics.py  test_audit.py  test_auth.py  test_booking_flow.py  test_cancellation.py  test_consultation_status.py  test_doctors.py  test_payments.py  test_prescriptions.py  test_rbac.py  test_search.py
tests/unit/: test_security.py
(+10 files in other folders)
