[project]
name = "amrutam-telemedicine"
version = "0.1.0"
description = "Production-grade telemedicine backend for Amrutam"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis>=5.2,<6",
    "arq>=0.27,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.2,<5",
    "pyotp>=2.9,<3",
    "qrcode[pil]>=7.4,<8",
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-instrumentation-fastapi>=0.51b,<1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2",
    "structlog>=25.1,<26",
    "python-multipart>=0.0.20,<1",
    "email-validator>=2.2,<3",
    "slowapi>=0.1.9,<1",
    "limits>=3.14,<4",
    "tenacity>=9.1,<10",
    "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "pytest-cov>=6.0,<8",
    "pytest-timeout>=2.3,<3",
    "ruff>=0.9,<1",
    "safety>=3.3,<4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() call in argument defaults is intentional

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = ["e2e: marks end-to-end tests (deselect with '-m \"not e2e\"')"]
